--- a/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexation_Decisions_l_english.yml
@@ -8,47 +8,47 @@ annexation_ALG_CONQ_desc:0 "우리가 마침내 알제리를 프랑스 폭군들
 annexation_ANG_CONQ:0 "앙골라의 운명"
 annexation_ANG_CONQ_desc:0 "포르투갈의 옛 식민지였던 앙골라를 합병하는 것은 멀리서 수백만의 아프리카인들을 관리해야 한다는 것을 의미합니다. 물론 지역민들의 정부를 세우는 것이 우리로써는 편하겠지만, 우리가 그 문제에 대해서 지역민들을 믿을 수 있을까요?"
 annexation_ARG_CONQ:0 "아르헨티나의 운명"
-annexation_ARG_CONQ_desc:0 "After the conquest of the vast nation of La Plata we have to organise competent administrations to keep the territory under control. Now we will need to decide on the fate of the region."
+annexation_ARG_CONQ_desc:0 "넓은 영토를 가진 라플라타를 점령하였음으로 이 영토에대한 지배권으로 높이기 위해서 우리는 강력한 집행기관을 설립해야만 합니다. 이제 이 지역의 운명을 결정할 때 입니다."
 annexation_ARM_CONQ:0 "아르메니아의 햡병"
 annexation_ARM_CONQ_desc:0 "코카서스에서의 격렬한 싸움 끝에, 우리는 아르메니아를 정복하고 합병했습니다. 아르메니아의 군대는 항복했고, 그 영토는 우리가 지배합니다. 주민들의 저항이 있습니다만, 곧 그들도 지배를 인정할 것입니다."
 annexation_AST_CONQ:0 "오스트랄라시아의 운명"
-annexation_AST_CONQ_desc:0 "After a hard campaign throughout the isolated islands of the Australasian confederation our armies finally reached Canberra and with the capitulation of Australasia we must decide how we want to manage it."
-annexation_AST_restoring_australasia:0 "오스트랄라시아 복원"
-annexation_AST_restoring_australasia_desc:0 "The Australasian government has been defeated and is currently under our control. The question before us is whether to restore its independence under the control of the loyalist Australasian Guard -- despite their extremist tendencies -- and hope they are able to maintain order, or whether we should enact the Emergency Protocols once again and assume direct rule through our Governor General."
+annexation_AST_CONQ_desc:0 "고립된 오스트랄라시아 연맹의 섬을 향한 고된 작전 끝에 우리 군이 드디어 캔버라에 도착하였고 오스트랄라시아인의 항복과 함께 우리가 이 지역을 어떻게 관리할 것인지를 결정해야만 합니다."
+annexation_AST_restoring_australasia:0 "오스트랄라시아 부활"
+annexation_AST_restoring_australasia_desc:0 "오스트랄라시아 정부는 패배하였고, 이제 우리들의 지배하에 있습니다. 그에 따라서 우리들 앞에 놓인 문제는 왕당파 오스트랄라시아 경비대의 지배하에 그들의 독립성을 부활시키고 그들이 질서를 유지할수 있도록 기도하거나(극단주의적 경향이 있긴 하지만), 다시한번 긴급 의전을 발동시켜 식민지 총독을 통한 직접적인 통치를 행사하는 것입니다."
 annexation_AUS_CONQ:0 "오스트리아의 합병"
 annexation_AUS_CONQ_desc:0 "오스트리아는 합병되었고, 우리 군대는 더 이상의 불안정을 야기할 수 있는 반란이나 또 다른 소요를 예방하기 위해 비엔나 거리를 순찰하고 있습니다."
 annexation_AUS_ITA_CONQ:0 "오스트리아령 이탈리아의 합병"
 annexation_AUS_ITA_CONQ_desc:0 "우리는 오스트리아가 점유한 이탈리아의 지방의 통제권을 손에 넣었고 이것을 어떻게 할지 결정할 필요가 있습니다..."
-annexation_AZB_CONQ:0 "아제르바이잔의 합병"
-annexation_AZB_CONQ_desc:0 "After fierce fighting in the Caucasus, we have conquered and annexed Azerbaijan. The Azeri army has surrendered, and the territory is under our control, but the people are still resistant."
+annexation_AZB_CONQ:0 "아제르바이잔 합병"
+annexation_AZB_CONQ_desc:0 "코카서스 산맥에서의 격렬한 전투이후, 우리가 아제르바이잔을 점령 후 합병하였지만, 시민들은 계속 저항 중입니다."
 annexation_BALTIC_CONQ:0 "발트 지역의 운명"
 annexation_BALTIC_CONQ_desc:0 "전 발트 지역이 우리의 지배하에 들어왔습니다. 현재 우리의 군대는 현지 주민들의 반발을 상대하고 있습니다. 우리는 발트 지역의 현지 정부에게 반발을 처리하도록 맡길 수 있습니다."
 annexation_BEL_CONQ:0 "벨기에의 운명"
-annexation_BEL_CONQ_desc:0 "After a short campaign across the fields of Belgium we now control the region and we must decide what to do with it. Belgium is a very divided country and splitting it along cultural lines might make for less trouble afterwards."
+annexation_BEL_CONQ_desc:0 "벨기에의 평야를 가로지르는 짧은 작전이후, 우리는 이제 지역에 대한 통제권을 얻었으며, 벨기에를 어떻게 할 것인지 결정해야만 합니다. 벨기에는 매우 분열된 국가로, 이후에 발생할 문제를 해결 하기 위해서는 문화권을 따라서 국가를 나누는 것이 도움이 될 수 있습니다."
 annexation_BFA_CONQ:0 "부르키나파소의 운명"
-annexation_BFA_CONQ_desc:0 "The ancient land of the Mossi have come to our control and are now a part of our country. Often divided and badly regarded by the colonial authorities, the Mossi people are now pleading us for the possibility to create an independent state of their own, with the influential Mogho Naba at the head of the movement. Should we let them organise themselves to an extent?"
+annexation_BFA_CONQ_desc:0 "모시의 고토가 우리의 통제에 들어왔으며 우리나라의 일부분이 되었습니다. 식민지 통치로 인해 자주 분할되고, 식민정부로 부터 대우받지 못 한 모시 국민들은 그들만의 독립된 나라를 만들 수 있다는 가능성에 대해 우리에게 애원하고있습니다. 저들 스스로 국가를 조직하게 두어야할까요?"
 annexation_BHU_CONQ:0 "부탄의 운명"
-annexation_BHU_CONQ_desc:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annexation_BHU_CONQ_desc:0 "히말라야에서의 성공적인 작전이후 우리는 평화를 되찾기 위해, 이 지역에 새로운 자치정부를 세워야 한다는 과제를 얻게 되었지만, 우리는 여러가지 선택지를 가지고있습니다..."
 annexation_BOL_CONQ:0 "볼리비아의 운명"
-annexation_BOL_CONQ_desc:0 "After a campaign through the jungles and deserts of Bolivia, we have finally managed to reach the gates to the Andes. La Paz is now in our hands! We must now decide on the future of Bolivia."
+annexation_BOL_CONQ_desc:0 "볼리비아의 정글과 사막에서의 작전 이후, 우리는 안데스 산맥을 향하는 관문에 성공적으로 도착하였고, 라파스는 이제 우리의 손아귀에 있습니다! 이제 우리는 볼리비아의 미래를 결정하여야만 합니다."
 annexation_BOS_CONQ:0 "보스니아의 운명"
-annexation_BOS_CONQ_desc:0 "The divided state of Bosnia is now under our occupation after our invasion of its territory. Our troops are parading in Sarajevo and we must decide what to do with it."
+annexation_BOS_CONQ_desc:0 "분열된 국가인 보스니아는 우리의 침략이후 우리의 점령하에 있습니다. 우리 군은 사라예보에서 열병식을 치르고 있으며, 이제는 보스니아를 어떻게 할 것인지를 결정해야 합니다."
 annexation_BOT_CONQ:0 "보츠와나의 운명"
-annexation_BOT_CONQ_desc:0 "The protectorate of Botswana, switched from British to South African leadership has seen many changes and is now prime for independence. Should we create a Botswanan satellite?"
+annexation_BOT_CONQ_desc:0 "영국에서 남아공으로 소속국이 변경된 보츠와나 보호령은 많은 변화가 있었고, 독립을 위한 모든 준비를 끝맞쳤습니다. 보츠나와를 위성국으로 만들까요?"
 annexation_BRA_CONQ:0 "브라질의 운명"
-annexation_BRA_CONQ_desc:0 "After the conquest of the vast nation of Brazil we have to organise competent administrations to keep the territory under control. Even if the magnificent city of Rio is under the boots of our soldiers we can't keep an hold on it forever."
-annexation_BRD_CONQ:0 "The Fate of Burundi"
-annexation_BRD_CONQ_desc:0 "We have now annexed Burundi, part of the former German colony of Tanganyika, should we restore the Burundi independence and let them manage their own lands?"
+annexation_BRA_CONQ_desc:0 "광활한 브라질에 대한 정복 작전 이후 우리는 브라질을 통제할 강력한 정부를 구성하였습니다. 장엄한 도시인 리오 조차 우리 군을 끝까지 막아내지 못 하였고, 우리 군의 군홧발에 짓밟혔습니다."
+annexation_BRD_CONQ:0 "부룬디의 운명"
+annexation_BRD_CONQ_desc:0 "이제 우리는 독일의 식민지였던 탕가니카 지역의 일부인 부룬디를 합병했습니다. 부룬디를 독립국가로 부활시키고 자치를 할 수 있도록 해주어야할까요?"
 annexation_BUL_CONQ:0 "불가리아의 합병"
-annexation_BUL_CONQ_desc:0 "After a long fight with the Bulgarian Empire, we have launched a full offensive and forced the Bulgarian Army to surrender. Sofia is now in our hands!"
+annexation_BUL_CONQ_desc:0 "불가리아 제국과의 기나긴 싸움 끝에 우리는 총공세를 감행하였고 불가리아 군대를 항복시켰습니다. 소피아는 이제 우리의 손아귀에 있습니다!"
 annexation_BUR_CONQ:0 "버마의 운명"
 annexation_BUR_CONQ_desc:0 "우리의 군대는 랑군으로 행군하고 있고 버마 지도부는 망명하거나 수감되었습니다. 이 땅을 어떻게 할까요?"
 annexation_CA_CONQ:0 "중앙 아시아의 운명"
 annexation_CA_CONQ_desc:0 "중앙 아시아 대초원에서의 작전에 이어, 우리는 이제 이 지역의 이전 주들에 대한 여러 영토를 통제하고 있습니다. 지역 지도자들, 그리고 우리 정치인들 역시 이 지역들에 대한 자치권을 호소하고 있습니다. 이 지역 전체 분할에서부터 최대 5개 주, 단일 중앙 아시아 연방으로의 합병까지 다양한 솔루션이 제안되었습니다."
-annexation_CAF_CONQ:0 "서인도 연합의 운명"
-annexation_CAF_CONQ_desc:0 "After a long campaign all across the Caribbean Sea, we have finally managed to shatter the West Indies defences. West Guyana is now in our hands! We must now decide on the future of the West Indies Federation."
+annexation_CAF_CONQ:0 "서인도제도 연방의 운명"
+annexation_CAF_CONQ_desc:0 "카리브 해를 가로지르는 기나긴 작전 끝에, 마침내 서인도제도의 방어를 박살냈습니다. 서가이아나는 이제 우리의 손아귀에 있습니다! 우리는 서인도제도의 미래를 결정해야합니다."
 annexation_CAM_CONQ:0 "캄보디아의 운명"
-annexation_CAM_CONQ_desc:0 "Our armies have taken control of Phnom Penh, and the local Cambodians are clamouring for self-government. We should decide what's to be done with the region."
+annexation_CAM_CONQ_desc:0 "우리 군이 프놈펜을 장악했으며, 캄보디아 현지인들은 자치정부를 요구하였습니다. 우리는 이 지역을 어떻게 해야할지 결정해야합니다."
 annexation_CAN_CONQ:0 "캐나다의 운명"
 annexation_CAN_CONQ_desc:0 "마침내 영국에서 망명정부가 도망간 캐나다 자치령을 우리의 자랑스러운 군대가 점령했습니다. 왕과 왕의 친족들이 국가를 떠났지만 그건 중요하지 않습니다, 우리는 이제 상당수의 땅을 통제하게 되었습니다. 이제 무얼해야할까요?"
 annexation_CEA_CONQ:0 "우방기샤리의 운명"
@@ -97,7 +97,7 @@ annexation_ERT_CONQ:0 "에리트레아의 운명"
 annexation_ERT_CONQ_desc:0 "After our successful campaign in Eritrea we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
 annexation_ETH_CONQ:0 "에티오피아의 운명"
 annexation_ETH_CONQ_desc:0 "After our successful campaign in Ethiopia we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
-annexation_FIN_CONQ:0 "핀란드의 합병"
+annexation_FIN_CONQ:0 "핀란드 합병"
 annexation_FIN_CONQ_desc:0 "핀란드 병사들은 패배했고 우리 군은 헬싱키로 행군하고 있습니다."
 annexation_FLW_FRA_CONQ:0 "플란데런-우알로니의 운명"
 annexation_FLW_FRA_CONQ_desc:0 "독일에 의해 세워진 폭압적인 반동정부에서 플란데런인들과 우알로니인들을 해방했으니 우리는 그들의 운명을 결정해야합니다. 우리는 플란데런-우알로니를 다시 세워 이번에는 생디칼리즘 정부로 만들 수도 있고 이 땅을 직접적으로 지배할 수도 있습니다. 어찌되었든 그들 중 일부는 정말로 프랑스의 영역이니까요. 다른 가능성으로는 플란데런-우알로니를 최종적으로 분리해 독립적인 국가로 만들 수 있습니다."
@@ -179,7 +179,7 @@ annexation_MAL_CONQ:0 "말리의 운명"
 annexation_MAL_CONQ_desc:0 "The valley of the Niger river, once known as French Sudan or Mali is now directly integrated into our territories. This colony though needs a better administration that we will have difficulties to provide, nevertheless the local people and the remnants of the French administration can administer it for us to an extent, should we let them form a loyal puppet state?"
 annexation_MEX_CONQ:0 "멕시코의 운명"
 annexation_MEX_CONQ_desc:0 "After a long campaign across Mexico, we have finally managed to shatter the Mexican defences. Mexico City is now in our hands! We must now decide on the future of Mexico."
-annexation_MLW_CONQ:0 "The Fate of Nyasaland"
+annexation_MLW_CONQ:0 "니아살란드의 운명"
 annexation_MLW_CONQ_desc:0 "With our new occupation of the former German colony of Nyasaland the choice of setting up a puppet government partly run by locals instead of a new colony has been brought up, should we go forward with this idea?"
 annexation_MLY_CONQ:0 "말레이시아의 운명"
 annexation_MLY_CONQ_desc:0 "Our armies have managed to take control of Malaysia, and it is now occupied by us. We have a few options at this juncture. What shall we do?"
@@ -202,7 +202,7 @@ annexation_NER_CONQ_desc:0 "Our proud armies have just annexed the former French
 annexation_NGR_CONQ:0 "나이지리아의 운명"
 annexation_NGR_CONQ_desc:0 "The vast and rich colony of Nigeria is now under our control and with it comes the burden of having to administer it, could we delegate this task to an extent to a local puppet state?"
 annexation_NIIS_CONQ:0 "니슈의 운명"
-annexation_NIIS_CONQ_desc:0 "The Nis region has been long contested by Serbia and Bulgaria. What should we do with the region?"
+annexation_NIIS_CONQ_desc:0 "니슈 지역은 오랜 시간동안 세르비아와 불가리아의 분쟁지역이였습니다. 이 지역을 어떻게 해야할까요?"
 annexation_NIC_CONQ:0 "니카라과의 운명"
 annexation_NIC_CONQ_desc:0 "With Managua in our hands, we now control Nicaragua and are able to decide what do with these lands."
 annexation_NOR_CONQ:0 "노르웨이의 합병"
