--- a/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Union_of_Britain_l_english.yml
@@ -8,15 +8,15 @@ ENG_united_britain_desc:0 "영국은 안팎에서 커다란 역경에 직면 해
 ENG_decentralized_command:0 "분산된 명령 체계"
 ENG_decentralized_command_desc:0 "우리 군대는 지휘권 분산으로 인해 전술적 명령 체계에 있어 심각하게 비효율적입니다. 야전 장교들은 물론이고 심지어 각 병사 하나하나조차도 명령 하에 모든 행동을 이행해야 하며, 지휘는 상부의 판단에 부합해야 합니다. 명령이 내려질 때까지 아무도 행동하지 않습니다."
 
-ENG_expand_industry_4:0 "산업 확장 : 로디언"
-ENG_expand_industry_4_desc:0 "스코틀랜드의 오랜 수도이자 브리튼 내에서 두 번째로 큰 도시인 에든버러는 산업 발전 부분에서 브리튼의 나머지 도시들보다 한참 뒤쳐졌습니다. 에든버러와 모든 로디언의 진정한 잠재력을 일깨워 줍시다."
+ENG_expand_industry_4:0 "산업 확장: 로디언"
+ENG_expand_industry_4_desc:0 "스코틀랜드의 오랜 수도이자 브리튼에서 두 번째로 큰 도시인 에든버러는 산업 발전 부분에서 브리튼의 나머지 도시들보다 한참 뒤쳐졌습니다. 에든버러와 모든 로디언의 진정한 잠재력을 일깨워 줍시다."
 ENG_expand_industry_3:0 "산업 확장: 북잉글랜드"
-ENG_expand_industry_3_desc:0 "북잉글랜드는 영국의 산업과 노동의 핵심입니다. 그러나 북쪽 노동자들은 그들이 받아야 할 수준보다 훨씬 낮은 생활 수준을 견뎌 냅니다. 지역 산업을 혁신하기 위해서는 집중적인 노력이 필요합니다."
-ENG_the_common_land:0 "공동 사유지"
-ENG_the_common_land_desc:0 "브리튼은 산업 혁명의 발상지였지만, 근본적으로 농촌 그리고 농업에 의지해 왔습니다. 농작물 수확량 증가를 촉진하기 위해, 혁명 기간 동안 몰수한 모든 귀족들의 영지는 생디칼리스트 농민들에게 배분되어야 합니다. 브리튼의 땅은 이제 그 인민들만의 것입니다!"
+ENG_expand_industry_3_desc:0 "북잉글랜드는 브리튼 산업 및 노동력의 핵심입니다. 그러나 북잉글랜드의 노동자들은 그들이 받아야 할 정당한 몫보다 훨씬 낮은 생활 수준을 견뎌냅니다. 이 지역의 산업을 혁신시키기 위해서는 집중적인 노력이 필요합니다."
+ENG_the_common_land:0 "공동사유지"
+ENG_the_common_land_desc:0 "브리튼은 산업 혁명의 발상지였지만, 근본적으로는 농업에 의지해 왔습니다. 농작물 수확량 증가를 촉진하기 위해, 혁명 기간 동안 몰수한 모든 귀족들의 영지는 생디칼리스트 농민들에게 배분되어야 합니다. 브리튼의 땅은 이제 그 인민들만의 것입니다!"
 
 ENG_cayley_plan:0 "케일리의 계획"
-ENG_cayley_plan_desc:0 "세계 대전 기간 동안 독일인들은 U 보트를 사용해 큰 효과를 거두었습니다. 리처드 케이리 (Richard Cayley) 제독은 영국이 급히 잠수함 함대를 확장시키고 독일을 모델로 재구성하는 것을 바라는 해군 장교들의 보컬 그룹의 최전선에 서있습니다."
+ENG_cayley_plan_desc:0 "세계 대전 기간 동안 독일인들은 U보트를 사용해 큰 효과를 거두었습니다. 리처드 케이리 (Richard Cayley) 제독은 영국이 급히 잠수함 함대를 확장시키고 독일을 모델로 재구성하는 것을 바라는 해군 장교들의 보컬 그룹의 최전선에 서있습니다."
 ENG_anstice_plan:0 "앤스티스의 계획"
 ENG_anstice_plan_desc:0 "항공기가 해군의 중추 역할을 할 수 있다는 개념에 대해 많은 사람들이 비난하는 동안 에드먼드 앤스티스 제독 제독은 해상에서 하늘을 제어해야한다고 주장했습니다. 그렇게하기 위해 앤스티스는 항공 모함의 역할과 수를 크게 확장 할 것을 제안합니다."
 ENG_dickens_plan:0 "디킨스의 계획"
@@ -45,7 +45,7 @@ ENG_republican_marines:0 "공화국 해병대"
 ENG_republican_marines_desc:0 "해상력과 그 계획은 군사 성공에 결정적인 역할을 하지만 배만으로는 섬을 침략하거나 해안을 공격 할 수 없습니다. 1925 년에 해병대 장병들이 혁명에 가담하지 않았기 때문에 수륙 양용 작전을 수행하는 공화국의 능력이 약화되었습니다. 우리가 바다 건너편에서 적과 대면 할 수 있는 희망이 있습니다. 우리는 해병대가 있어야 합니다."
 ENG_revolutionary_admiralty:0 "혁명 해군"
 ENG_revolutionary_admiralty_desc:0 "해군 해병 사무소는 왕립 해군 행정부의 책임자이며 임원 간의 의사 소통의 장이 되었습니다. 공화국 해군은 현재 정치 분야에 묶여있는 해군 사령부와 비슷한 사무실을 거의 갖추고 있지 않습니다. 따라서 우리는 독립적이고 철저하게 사회주의 해군을 설립해야 합니다."
-ENG_brittania_rules_the_waves:0 "브리타니아는 파도를 지배한다."
+ENG_brittania_rules_the_waves:0 "브리타니아가 파도를 지배한다"
 ENG_brittania_rules_the_waves_desc:0 "마침내 영국 해군은 이전의 해군처럼 보이기 시작했습니다. 조만간, 영국은 다시 파도를 지배 할 것입니다. 브리튼은 결코 노예가 되지 않습니다!"
 
 ENG_republican_air_force:0 "공화국 공군"
@@ -62,21 +62,21 @@ ENG_rule_the_sky:0 "하늘을 지배하다"
 ENG_rule_the_sky_desc:0 "항공 우위는 군 작전의 유연성을 허용하고, 보병에게 갑작스런 적의 공습을 두려워 할 필요가없는 마음의 평화를 제공합니다. 따라서 하늘의 통제가 공군의 기본 지침이되어야 합니다."
 ENG_air_observer_corps:0 "항공 관측소"
 ENG_air_observer_corps_desc:0 "런던은 독일 비행선에 의해 세계 대전에 걸쳐 공포에 떨게 되었지만,이 습격으로 인한 피해는 상대적으로 적습니다. 그러나 그 이후로 항공기의 범위와 탑재량이 크게 증가했습니다. 위협에 대처하기 위해 우리는 적의 비행기가 우리의 요격기와 대공 방어 팀을 예고하기 위해 경계심을 갖고 보이는 자원 봉사 단체를 창설해야합니다."
-ENG_expand_air_unions:0 "Air Union 확장"
+ENG_expand_air_unions:0 "에어 유니온 확장"
 ENG_expand_air_unions_desc:0 "우리의 비행장 확대 프로그램은 공화 공군의 확장에 큰 도움이되었지만 상당한 행정 부담으로 판명되었습니다. 이제 공군력이 확립되면서 에어 유니온 (Air Union) 프로그램이 확장 될 수 있습니다."
 
-ENG_international:0 "인터내셔널 속의 영국"
-ENG_international_desc:0 "영국의 정치 파벌들은 상당히 다른 외교 정책 접근법을 옹호하고 있습니다. 1936 년의 격렬한 노동조합총회 특별 세션이 끝나면 세계에서 영국의 위치, 특히 제3인터내셔널의 사회주의 동지와의 관계를 재평가해야 합니다."
-ENG_anglo_norwegian_cooperation:0 "앵글로 노르웨이 협력"
-ENG_anglo_norwegian_cooperation_desc:0 "더 공평한 노르웨이가 생겨 났고, 우리는 거기서 우리 사회주의 형제들과 함께 팔을 뻗을 것입니다. 노르웨이와 영국 국민은 서로를 많이 제공해야하며, 선의의 제스처로서 향후 협력을 위해 노르웨이의 관대 한 경제 지원을 제공 할 것입니다."
-ENG_anglo_irish_friendship:0 "영국 - 아일랜드 우정"
-ENG_anglo_irish_friendship_desc:0 "마침내 에메랄드 섬에 빛나는 사회주의의 빛으로, 역사적으로 밀접하게 연결된 사람들 사이의 화해를위한 시간이 왔습니다. 우리는 외교관과 정치인을 더블린에 파견해야 할뿐만 아니라 진보의 길을 따라 아일랜드를 돕기 위해 가장 성공적인 영국 생디칼리스트의 대표자가 되어야 합니다."
+ENG_international:0 "인터내셔널 속의 브리튼"
+ENG_international_desc:0 "브리튼의 정치 파벌들은 상당히 다른 외교 정책 접근법을 옹호하고 있습니다. 1936 년의 격렬한 노동조합총회 특별 세션이 끝나면 세계에서 브리튼의 위치, 특히 제3인터내셔널의 사회주의 동지와의 관계를 재평가해야 합니다."
+ENG_anglo_norwegian_cooperation:0 "앵글로-노르웨이 협력"
+ENG_anglo_norwegian_cooperation_desc:0 "'더 평등한' 노르웨이가 태어났으니, 우리는 그 곳의 우리 사회주의자 형제들에게 팔을 뻗을 것입니다. 노르웨이와 브리튼 인민은 서로의 힘이 되어야 하며, 향후 협력을 위한 선의의 제스처로서 노르웨이에게 막대한 경제 지원을 제공할 것입니다."
+ENG_anglo_irish_friendship:0 "앵글로-아일랜드 우호"
+ENG_anglo_irish_friendship_desc:0 "마침내 아일랜드 섬에 빛나는 사회주의가 자리잡았으므로, 역사적으로 밀접하게 연결된 우리 인민들간의 화해를 위한 시간이 왔습니다. 우리는 외교관과 정치인을 더블린에 파견하고 아일랜드의 번영을 돕기 위해 우리가 가장 성공적인 생디칼리즘이라 자부하는 '브리튼식 생디칼리즘'의 저력을 보여주어야 합니다."
 ENG_class_warfare:0 "계급 투쟁"
-ENG_class_warfare_desc:0 "전쟁은 우리에게 있으며, 우리의 위대한 국가를 보존하고 자유를 확보하기 위해, 모든 노동자는 이제 승리를 위해 연합해야 합니다. 우리는 전쟁의 노력을 강화하기 위해 단합, 자기 희생, 그리고 무엇보다도 새롭게 부상한 계급 의식을 증진해야 합니다."
-ENG_never_surrender:0 "우리는 결코 항복하지 않는다"
-ENG_never_surrender_desc:0 "어떤 전쟁 노력과 마찬가지로, 적과의 화해를 옹호하는 많은 비방자가 있습니다. 이러한 정서에 맞서기 위해 전쟁의 정당성과 승리의 필요성을 홍보하기위한 선전 운동을 시작해야 합니다."
-ENG_bletchley_park:0 "브레틀리 파크"
-ENG_bletchley_park_desc:0 "버킹엄셔 북부에 군사 정보의 해킹 팀이 등장했습니다. 최소한의 자금 지원에도 불구하고, 블렛체리 파크 전기 기술자의 연합은 우리의 외국 정보 기관과 협력하여 단 하나의 결과를 만들어 냈습니다. 우리는 블렛체리 파크의 시설을 확장하고 상당한 수준의 기금을 제공해야 합니다."
+ENG_class_warfare_desc:0 "우리는 전쟁 중입니다. 승리로써 우리의 위대한 조국을 보존하고 자유를 수호하기 위해 모든 노동자들이 단결할 때입니다. 우리는 전쟁 수행력을 강화하기 위해 단합력, 자기희생, 그리고 무엇보다도 새롭게 부상한 계급의식을 고무시켜야만 합니다."
+ENG_never_surrender:0 "결코 항복하지 않으리"
+ENG_never_surrender_desc:0 "우리가 겪어온 다른 전쟁들과 마찬가지로, 적과의 화해를 주장하는 많은 반동분자들이 있습니다. 우리는 이러한 정서에 맞서기 위해 전쟁의 정당성과 승리의 필요성을 알리기 위한 선전 운동을 시작해야 합니다."
+ENG_bletchley_park:0 "브레츨리 파크"
+ENG_bletchley_park_desc:0 "버킹엄셔 북부에 군사기밀 해독 팀이 등장했습니다. 최소한의 자금 지원에도 불구하고, 브레츨리 파크 전기 기술자 연합은 우리의 해외 주재 정보 기관과 협력하여 기대 이상의 결과를 만들어 냈습니다. 우리는 브레츨리 파크의 시설을 확장하고 충분한 예산을 제공해야 합니다."
 ENG_support_comrades:0 "외국 동지들 지원"
 ENG_support_comrades_desc:0 "사회주의가 생존한다면, 모든 사회주의 국가들은 번창해야 합니다. 전 세계에 억압당한 사람들을 돕기 위해 사회주의자로서의 의무가 있습니다."
 ENG_american_comrades:0 "미국의 동지들"
