--- a/Kaiserreich Korean Translation/localisation/KR_Bavaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bavaria_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-BAV_totalist_party:0 "SV"
+BAV_totalist_party:0 "인민전선"
 BAV_totalist_party_long:0 "사회주의 인민전선"
-BAV_radical_socialist_party:0 "RBB"
+BAV_radical_socialist_party:0 "극단주의 농민동맹"
 BAV_radical_socialist_party_long:0 "극단주의 농민동맹"
-BAV_syndicalist_party:0 "SOI"
+BAV_syndicalist_party:0 "남독일 인터내셔널"
 BAV_syndicalist_party_long:0 "인터내셔널 남독일 지부"
-BAV_social_democrat_party:0 "SPD"
+BAV_social_democrat_party:0 "사회당"
 BAV_social_democrat_party_long:0 "독일 사회당"
-BAV_social_liberal_party:0 "BVP"
+BAV_social_liberal_party:0 "인민당"
 BAV_social_liberal_party_long:0 "바이에른 인민당"
-BAV_market_liberal_party:0 "DB"
+BAV_market_liberal_party:0 "농민동맹"
 BAV_market_liberal_party_long:0 "독일농민동맹"
-BAV_social_conservative_party:0 "CDV"
+BAV_social_conservative_party:0 "인민당"
 BAV_social_conservative_party_long:0 "기독사회주의 인민당"
-BAV_authoritarian_democrat_party:0 "BdL"
+BAV_authoritarian_democrat_party:0 "농업자동맹"
 BAV_authoritarian_democrat_party_long:0 "농업자동맹"
-BAV_paternal_autocrat_party:0 "DNP"
+BAV_paternal_autocrat_party:0 "국가당"
 BAV_paternal_autocrat_party_long:0 "독일 국가당"
-BAV_national_populist_party:0 "AV"
+BAV_national_populist_party:0 "전독연맹"
 BAV_national_populist_party_long:0 "전독일연맹"
