--- a/Kaiserreich Korean Translation/localisation/KR_Rhineland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Rhineland_l_english.yml
@@ -1,23 +1,23 @@
 ﻿l_english:
 
 ### Parties ###
-WGR_totalist_party:0 "SE"
-WGR_totalist_party_long:0 "Sozialistische Einheitsplattform"
-WGR_radical_socialist_party:0 "FAUdR"
-WGR_radical_socialist_party_long:0 "Freie Arbeiterunion des Rheinlandes"
-WGR_syndicalist_party:0 "ROI"
-WGR_syndicalist_party_long:0 "Rheinische Organisation der Internationale "
-WGR_social_democrat_party:0 "SPD"
-WGR_social_democrat_party_long:0 "Sozialdemokratische Partei Deutschlands"
-WGR_social_liberal_party:0 "FVP"
-WGR_social_liberal_party_long:0 "Fortschrittliche Volkspartei"
-WGR_market_liberal_party:0 "DDP"
-WGR_market_liberal_party_long:0 "Deutsche Demokratische Partei"
-WGR_social_conservative_party:0 "Zentrum"
-WGR_social_conservative_party_long:0 "Rheinländische Zentrumspartei"
-WGR_authoritarian_democrat_party:0 "BdL"
-WGR_authoritarian_democrat_party_long:0 "Bund der Landwirte"
-WGR_paternal_autocrat_party:0 "DNP"
-WGR_paternal_autocrat_party_long:0 "Deutschnationale Partei"
-WGR_national_populist_party:0 "AV"
-WGR_national_populist_party_long:0 "Alldeutscher Verband"
+WGR_totalist_party:0 "통일사회당"
+WGR_totalist_party_long:0 "통일사회당"
+WGR_radical_socialist_party:0 "자유노동자조합"
+WGR_radical_socialist_party_long:0 "라인란트 자유노동자조합"
+WGR_syndicalist_party:0 "라인란트 인터내셔널"
+WGR_syndicalist_party_long:0 "인터내셔널 라인란트 지부"
+WGR_social_democrat_party:0 "사회민주당"
+WGR_social_democrat_party_long:0 "독일 사회민주당"
+WGR_social_liberal_party:0 "진보인민당"
+WGR_social_liberal_party_long:0 "진보인민당"
+WGR_market_liberal_party:0 "민주당"
+WGR_market_liberal_party_long:0 "독일민주당"
+WGR_social_conservative_party:0 "중앙당"
+WGR_social_conservative_party_long:0 "라인란트 중앙당"
+WGR_authoritarian_democrat_party:0 "농업자연맹"
+WGR_authoritarian_democrat_party_long:0 "농업자연맹"
+WGR_paternal_autocrat_party:0 "국가당"
+WGR_paternal_autocrat_party_long:0 "독일국가당"
+WGR_national_populist_party:0 ""
+WGR_national_populist_party_long:0 "전독일연맹"
