--- a/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Brazil_l_english.yml
@@ -434,7 +434,7 @@ BRA_o_petroleo_e_nosso:0 "우리의 기름"
 BRA_o_petroleo_e_nosso_desc:0 "석유에 대한 완전한 국가 통제를 위한 대중의 지지는 항상 있었지만, 최근 몇 년 동안 특히 아동 도서 작가인 로저 몬테이로 로바토의 노력 때문에 거대한 대중적 문제로 치솟았습니다. 우리는 현재 대중의 요구를 준수함으로써 전쟁의 중요한 자산에 대한 통제권을 보장할 수 있습니다."
 
 BRA_left_alliance:0 "좌익 민주 정부"
-BRA_left_alliance_desc:0 "민주좌파연합은 더 좋고 더 공정한 브라질에 대한 희망에 의해서만 통합되고 다양화됩니다. 우리 정부는 균형 잡힌 행동을 할 것이지만 우리 조국이 번영하려면 성공해야만 합니다."
+BRA_left_alliance_desc:0 "좌익 민주 연합은 더 좋고 더 공정한 브라질에 대한 희망에 의해서만 통합되고 다양화됩니다. 우리 정부는 균형 잡힌 행동을 할 것이지만 우리 조국이 번영하려면 성공해야만 합니다."
 BRA_workers_rights:0 "근로자 권리 보호"
 BRA_workers_rights_desc:0 "너무 오랜 기간 동안 노동자들은 힘든 근무 교대나 유급 휴가 같은 기본적인 권리 부족과 함께, 고용주들의 자비 아래에서 살아왔습니다. 이것을 바꾸기 위해서, 우리는 새로운 법을 만들고 기존의 법을 무시하고 브라질 사람들을 탐욕스러운 침입자로부터 구해야 합니다."
 BRA_increased_public_salaries:0 "공공 급여 인상"
@@ -1019,7 +1019,7 @@ bra.108.t:0 "미국의 내전"
 bra.108.d:0 "미국에서 내전이 발발하였습니다! 잔혹한 쿠데타, 국민들이 듣지 못하는 목소리, 위대한 공화국은 몰락했습니다. 우리는 지금 이 반구에서 가장 위대한 나라이기 때문에, 우리의 의무는..."
 bra.108.a:0 "연방을 구하라! 연방 정부를 지원한다!"
 bra.108.b:0 "서민들을 보호하라! 미주 연합을 지원한다!"
-bra.108.c:0 "민주주의를 보호하라! 태평양 합중국을 지원한다!"
+bra.108.c:0 "민주주의를 보호하라! 미 태평양 합중국을 지원한다!"
 bra.108.e:0 "우리는 상관없다"
 bra.109.t:0 "브라질의 자원병과 장비 도착"
 bra.109.d:0 "이런 암울한 시대에, 우리에게 친구들이 있다는 것과 우리의 성공을 바라는 많은 사람들이 있다는 것을 아는 것은 위안이 됩니다. [BRA.GetNameDefCap]는 우리에게 내전에 도움이 될 자원병과 장비를 보냈고, 이 사람들은 전문적인 훈련과 장비가 부족할 수도 있지만, 미국을 해방시키기 위해 거의 1만 마일을 여행했습니다. 그들을 실망시키지 않는 것이 최선입니다!"
@@ -1503,7 +1503,7 @@ bra.559.t:0 "북동부 지역의 젊은 마라냥 동지"
 bra.559.d:0 "소규모 산업 지구가 있는 동안, 북부 지역은 항상 노동자들의 학대의 온상이 되어왔고, 따라서 많은 영향력 있는 노동운동가들이 수년 동안 그곳에 올라왔습니다. 그러한 지도자 중 한 명은 젊은 잘마입니다. 그의 끊임없는 운동과 적극성이 그를 브라질의 새로운 젊은이들의 얼굴로 만들었습니다. 북동부 지역 학생들과 노동조합 간부들 사이에서 그의 지지는 상당합니다. 그리고 그는 지금 그가 이전에 목표로 했던 것보다 훨씬 더 높은 위치에 있는 노동조합 의장 선거에 출마하고 싶다는 그의 바람을 발표했습니다."
 bra.559.a:0 "또 다른 경쟁자로군"
 bra.560.t:0 "남동부 지역에서 디아스 동지가 지지를 얻다"
-bra.560.d:0 "에베라도 디아스는 상파울루의 주요 노동 지도자들 중 한 명이었습니다. 스페인에서 태어났을 때, 그는 아주 어린 나이에 브라질로 왔고, 젊었을 때부터 노동조합과 좌익 신문사들과 함께 일하면서 정치적으로 관여된 사람이었습니다. 지난 선거에서의 민주좌파의 승리는 그에게 미래에 대한 희망을 가득 채웠으며, 연합의 선언도 그랬고, 이 남자는 브라질을 새로운 진보의 시대로 이끌려는 전망에 대해 대단히 열정적입니다."
+bra.560.d:0 "에베라도 디아스는 상파울루의 주요 노동 지도자들 중 한 명이었습니다. 스페인에서 태어났을 때, 그는 아주 어린 나이에 브라질로 왔고, 젊었을 때부터 노동조합과 좌익 신문사들과 함께 일하면서 정치적으로 관여된 사람이었습니다. 지난 선거에서의 좌익민주당의 승리는 그에게 미래에 대한 희망을 가득 채웠으며, 연합의 선언도 그랬고, 이 남자는 브라질을 새로운 진보의 시대로 이끌려는 전망에 대해 대단히 열정적입니다."
 bra.560.a:0 "행운을 빌지!"
 bra.561.t:0 "망가베이라가 공직에 돌아오다"
 bra.561.d:0 "대통령 시절 주앙 망가베이라의 노력은 아마도 뒤늦게나마 실패할 운명이었던 것 같습니다. 노동자들의 상태를 개선하려고 끊임없이 정치세력을 휘두른 것은 결국 군부에 의한 퇴임으로 참담한 실패로 끝났습니다. 그의 입지는 매우 약했고, 그는 심지어 제1차 노동조합 총회의 구성원도 아니었으며, 대부분의 공직 생활에서 은퇴했습니다. 하지만, 그는 이제 그의 복귀를 선언했습니다. 몇몇 사람들은 논쟁의 여지가 있는 움직임이라고 말할지도 모릅니다. 시간이 지나면 그가 어떤 동기부여를 해야 하는지 알게 될 것입니다."
