--- a/Kaiserreich Korean Translation/localisation/KR_Mexico_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mexico_l_english.yml
@@ -139,9 +139,9 @@ MEX_reconquista_decisons_descions:0 "멕시코는 1848년에 미국인들이 훔
 MEX_reclaim_lost_territories_decisions:0 "잃어버린 영토를 되찾다"
 MEX_reclaim_lost_territories_decisions_desc:0 "우리가 북쪽에 있는 기만적인 미국인들과 전쟁을 하기 전에, 우리는 잃어버린 영토가 멕시코의 것이며 멕시코에 속한다는 우리의 주장을 세상에 내놓아야 합니다."
 MEX_reconquistia_usa:0 "미합중국으로부터 우리의 영토를 되찾는다"
-MEX_reconquistia_psa:0 "태평양 합중국으로부터 우리의 영토를 되찾는다"
+MEX_reconquistia_psa:0 "미 태평양 합중국으로부터 우리의 영토를 되찾는다"
 MEX_reconquistia_csa:0 "노동 연맹으로부터 우리의 영토를 되찾는다"
-MEX_reconquistia_aus:0 "미주 연방으로부터 우리의 영토를 되찾는다"
+MEX_reconquistia_aus:0 "미주 연합으로부터 우리의 영토를 되찾는다"
 
 MEX_international_decisions:0 "대외 정책 결정"
 MEX_international_decisions_desc:0 "우리는 세계 무대에서 우리의 입지를 굳건히 하기 위해 우리의 초점을 바깥으로 이동시키고 동맹을 맺거나 다른 나라들과 관계를 맺기 시작하는 것이 중요합니다."
