--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -75,27 +75,27 @@ ACW_plains_ceasefire:0 "그레이트플레인스 휴전"
 ACW_rocky_ceasefire:0 "로키산맥 휴전"
 ACW_is_recruiting:0 "Currently focused on raising support"
 ACW_recruit_1_unit:0 "§G1§! militia unit is raised in the state\n"
-ACW_recruit_2_units:0 "§G2§! militia units are raised in the state\n"
-ACW_recruit_3_units:0 "§G3§! militia units are raised in the state\n"
-ACW_recruit_4_units:0 "§G4§! militia units are raised in the state\n"
-ACW_recruit_5_units:0 "§G5§! militia units are raised in the state\n"
-ACW_recruit_6_units:0 "§G6§! militia units are raised in the state\n"
-ACW_recruit_7_units:0 "§G7§! militia units are raised in the state\n"
-ACW_recruit_8_units:0 "§G8§! militia units are raised in the state\n"
-ACW_recruit_9_units:0 "§G9§! militia units are raised in the state\n"
-ACW_recruit_10_units:0 "§G10§! militia units are raised in the state\n"
-ACW_recruit_11_units:0 "§G11§! militia units are raised in the state\n"
-ACW_recruit_12_units:0 "§G12§! militia units are raised in the state\n"
-ACW_recruit_13_units:0 "§G13§! militia units are raised in the state\n"
-ACW_recruit_14_units:0 "§G14§! militia units are raised in the state\n"
-ACW_recruit_15_units:0 "§G15§! militia units are raised in the state\n"
-ACW_recruit_16_units:0 "§G16§! militia units are raised in the state\n"
-ACW_recruit_17_units:0 "§G17§! militia units are raised in the state\n"
-ACW_recruit_18_units:0 "§G18§! militia units are raised in the state\n"
-ACW_recruit_19_units:0 "§G19§! militia units are raised in the state\n"
-ACW_recruit_20_units:0 "§G20§! militia units are raised in the state\n"
+ACW_recruit_2_units:0 "§G2§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_3_units:0 "§G3§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_4_units:0 "§G4§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_5_units:0 "§G5§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_6_units:0 "§G6§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_7_units:0 "§G7§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_8_units:0 "§G8§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_9_units:0 "§G9§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_10_units:0 "§G10§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_11_units:0 "§G11§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_12_units:0 "§G12§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_13_units:0 "§G13§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_14_units:0 "§G14§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_15_units:0 "§G15§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_16_units:0 "§G16§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_17_units:0 "§G17§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_18_units:0 "§G18§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_19_units:0 "§G19§! 개의 민병대 사단이 주에 배치될 것입니다\n"
+ACW_recruit_20_units:0 "§G20§! 개의 민병대 사단이 주에 배치될 것입니다\n"
 ACW_recruit_5_rebels:0 "§G5§! rebel units are raised in the state\n"
-ACW_three_units_capital:0 "Three emergency reserve units will be raised in the capital"
+ACW_three_units_capital:0 "비상 예비군 사단 셋이 수도에 배치될 것입니다"
 ACW_six_units_raised:0 "§G6§! 추가적인 민병대와 보병 사단이 배치될 것입니다"
 USA_capital_moved:0 "수도가 이전되었습니다"
 
@@ -571,33 +571,33 @@ amcivwar.80.a:0 "하워드 휴즈"
 amcivwar.80.b:0 "헨리 아놀드"
 amcivwar.80.c:0 "오스카 웨스트오버"
 
-amcivwar.90.t:0 "Support from the Resistance"
+amcivwar.90.t:0 "저항 세력의 지원"
 amcivwar.90.d:0 "Rebels fighting for the [Root.GetAdjective] cause elsewhere in the United States have made contact with our government, offering an array of scaveneged supplies."
 amcivwar.90.a:0 "It will be a great help."
 
-amcivwar.91.t:0 "Support from Syndicalists"
+amcivwar.91.t:0 "생디칼리스트의 지원"
 amcivwar.91.d:0 "Rebels fighting for the [Root.GetAdjective] cause elsewhere in the United States have made contact with our government, offering an array of scaveneged supplies."
 amcivwar.91.a:0 "It will be a great help."
 
-amcivwar.92.t:0 "Support from Longists"
+amcivwar.92.t:0 "롱주의자의 지원"
 amcivwar.92.d:0 "Rebels fighting for the [Root.GetAdjective] cause elsewhere in the United States have made contact with our government, offering an array of scaveneged supplies."
 amcivwar.92.a:0 "It will be a great help."
 
-amcivwar.93.t:0 "Support from the Loyalists"
+amcivwar.93.t:0 "충성주의자의 지원"
 amcivwar.93.d:0 "Rebels fighting for the [Root.GetAdjective] cause elsewhere in the United States have made contact with our government, offering an array of scaveneged supplies."
 amcivwar.93.a:0 "It will be a great help."
 
-amcivwar.94.t:0 "Syndicalist Uprising in the West"
+amcivwar.94.t:0 "생디칼리스트가 서부에서 봉기하다"
 amcivwar.94.d:0 "Fighting along the West Coast between syndicalist sympathizers and security forces has been severe in recent weeks, but dropped off within the last weeks - leading to hopes that the unions out west had finally given up hope of success. These hopes were dashed as a new uprising was revealed, with a number of militias organized by powerful Teamster and Longshoremen unions in Washington and Oregon state and armed through underground efforts. This opens up a new front in the civil war, should the rebels find a way to break out of the mountains."
 amcivwar.94.a:0 "Hurrah!"
 amcivwar.94.b:0 "More syndicalist scum?!"
 
-amcivwar.95.t:0 "Longest Rebels Rise in Kentucky"
+amcivwar.95.t:0 "롱주의자가 켄터키에서 봉기하다"
 amcivwar.95.d:0 "Huey Long always held strong support in the heartland, with states like Kentucky and Indiana only barely swinging elsewhere in the 1936 election. Now, Longist supporters have risen up in Kentucky and the surrounding region, taking up arms gained through the underground to band together and open a new front in the civil war."
 amcivwar.95.a:0 "Hurrah!"
 amcivwar.95.b:0 "This will not help them in the long run."
 
-amcivwar.96.t:0 "Loyalists Rise in Pennsylvania"
+amcivwar.96.t:0 "충성주의자가 펜실베니아에서 봉기하다"
 amcivwar.96.d:0 "Support for the federal government remains strong even in the syndicalist heartland of Pennsylvania, and this has finally been proven as bands of loyalist militia -- reportedly organized in the city of Philadelphia -- rose up in the hills in the central part of the state, claiming the region once more for federal control. Whether they will achieve that goal and open up a new front in the civil war remains to be seen."
 amcivwar.96.a:0 "Hurrah!"
 amcivwar.96.b:0 "A futile effort."
@@ -606,7 +606,7 @@ amcivwar.97.t:0 "The [From.GetAdjective] Rebels"
 amcivwar.97.d:0 "We are seeing increased activity by [From.GetAdjective] supporters in [Root.GetNameDef], no doubt supported and funded by the [From.GetAdjective] government. Their funneling of weapons through the underground has led up to rebels rising behind the lines, no doubt intended to harass our forces. Whether they will prove a serious threat remains to be seen."
 amcivwar.97.a:0 "We shall endure."
 
-amcivwar.98.t:0 "Resistance Rises in Midwest"
+amcivwar.98.t:0 "중서부에서 저항 세력이 봉기하다"
 amcivwar.98.d:0 "Support for the democratic proponents in the Pacific government has been strong in the American Midwest, with several protests on the streets frequent - many of whom appear to be placing blame for the civil war squarely on the shoulders of General MacArthur. These protests have recently become more organized, and have culminated in a widespread uprising across Colorado, quietly funded and equipped through underground means. Whether these rebels will succeed in opening up a new front for the civil war remains to be seen."
 amcivwar.98.a:0 "Hurrah!"
 amcivwar.98.b:0 "A nuisance at best."
@@ -768,7 +768,7 @@ amcivwar.156.f:0 "미국을 재건하자!"
 amcivwar.156.g:0 "군사점령을 계속하자!"
 
 amcivwar.199.t:0 "미국의 마지막 보루"
-amcivwar.199.d:0 "It is beginning to dawn upon our citizens that the American civil war is actually over. The scars from the fighting will last for a long time, but it seems as if the feeling has already started to sink in that any chance to change America's destiny further has passed. We are now and forever more [Root.GetNameDef], and the world should know that is so."
+amcivwar.199.d:0 "미국 내전이 사실상 끝났다는 사실이 우리 국민들에게 알려지기 시작했습니다. 이 전쟁의 상처는 오랫동안 지속될 것이지만, 미국의 운명을 더 바꿀 수 있는 기회는 이미 지나갔다는 점에서 상처는 이미 사그라들기 시작한 것 같습니다. 우리는 영원히 [Root.GetNameDef]일 것이며, 세상은 이를 알아야 합니다."
 amcivwar.199.a:0 "하느님이 미국을 보우하사!"
 
 
@@ -858,23 +858,23 @@ amcivwar.221.d:0 "불행하게도 독일은 우리의 보호 요청을 거절했
 amcivwar.221.a:0 "우리는 독립해야만 한다"
 amcivwar.221.b:0 "국민 프랑스에 접근해보자"
 
-amcivwar.222.t:0 "Liberia stands alone"
+amcivwar.222.t:0 "라이베리아가 홀로 서다"
 amcivwar.222.d:0 "The tiny nation of Liberia has broken away from US protection and is now alone. We could try to seize the lands for ourselves, although this would not be a popular move among both allies and enemies."
 amcivwar.222.a:0 "We have no ambitions on Liberia"
 amcivwar.222.b:0 "They are unprotected - seize their lands!"
 
-amcivwar.223.t:0 "Liberia stands alone"
+amcivwar.223.t:0 "라이베리아가 홀로 서다"
 amcivwar.223.d:0 "The tiny nation of Liberia has broken away from US protection and is now alone. We could try to seize the lands for ourselves, although this would not be a popular move among both allies and enemies."
 amcivwar.223.a:0 "We have no ambitions on Liberia"
 amcivwar.223.b:0 "They are unprotected - seize their lands!"
 
-amcivwar.224.t:0 "The French attack"
-amcivwar.224.d:0 "The greedy, imperialist French have decided to attack us as we have no protector. We have no choice but to fight for our survival."
-amcivwar.224.a:0 "Mobilise as many men as possible."
+amcivwar.224.t:0 "프랑스의 공격"
+amcivwar.224.d:0 "탐욕스러운 프랑스 제국주의자가 우릴 보호해줄 나라가 없음을 알고는 우리를 공격하기로 결정했습니다. 이제는 생존을 위해 싸우는 것 말고는 선택의 여지가 없습니다."
+amcivwar.224.a:0 "가능한 많은 사람을 동원해라."
 
-amcivwar.225.t:0 "The German-Afrikaans attack"
-amcivwar.225.d:0 "Taking advantage of our diplomatic isolation, the German administration in Mittelafrika has decided to attack us. We have no choice but to fight for our survival."
-amcivwar.225.a:0 "Mobilise as many men as possible."
+amcivwar.225.t:0 "독일계 아프리칸스의 공격"
+amcivwar.225.d:0 "중앙아프리카의 독일 행정부는 우리의 외교적 고립에서 이득을 얻기 위해 우리를 공격하기로 결정했습니다. 이제는 생존을 위해 싸우는 것 말고는 선택의 여지가 없습니다."
+amcivwar.225.a:0 "가능한 많은 사람을 동원해라."
 
 amcivwar.226.t:0 "필리핀에서의 독립 요구"
 amcivwar.226.d:0 "The civil war in America has left the American hold over the Philippines weakened. The people of the Philippines are demanding full independence but some in the government are worried that an independent Philippines will be absorbed by the greater powers in the area."
@@ -952,12 +952,12 @@ amcivwar.312.a:0 "이제 무슨 일이 일어날까."
 ### Sanity Checks ###
 
 amcivwar.600.t:0 "[Root.GetAdjective]의 붕괴"
-amcivwar.600.d:0 "Our forces cannot hold out against the enemy any longer - already our troops are beginning to desert en masse, and the ripple of disorganization is working its way up the ranks. [Root.GetNameDefCap] is near the point of defeat, and we must admit that it is so."
+amcivwar.600.d:0 "우리 군은 더 이상 적에 대항할 수 없습니다. 이미 아군은 집단으로 탈영하기 시작했으며, 붕괴의 파장은 그 수위를 높여가고 있습니다. [Root.GetNameDefCap]은 패전에 이르렀고, 이를 인정해야 합니다."
 amcivwar.600.a:0 "여기서 끝나는구만..."
 
 amcivwar.607.t:0 "연방정부의 붕괴"
 amcivwar.607.d.lives:0 "It appears that the Federal government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Federal leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
-amcivwar.607.d.falls:0 "News travelled quickly today that the Federal government has collapsed in the American Civil War. What land was formerly under its control has been swallowed up by the other American factions, and the last remaining Federal leaders were reported to have met with generals from [annex_to.GetNameDef] in order to negotiate the terms of their complete surrender. The whereabouts of [USA.GetLeader] is unknown, but he is also believed to have already been placed under arrest. The future of the United States, it appears, rests in the hands of the factions which tore it down."
+amcivwar.607.d.falls:0 "오늘, 미국 내전에서 연방정부가 붕괴되었다는 소식이 빠르게 전해졌습니다. 연방정부의 지배하에 있던 영토는 미국의 다른 세력들에 의해 흡수되었고, 마지막 남은 연방정부의 지도부들은 완전한 항복 조건을 협상하기 위해 [annex_to.GetNameDef]의 장군들과 만난 것으로 알려졌습니다. [USA.GetLeader]의 소재는 알려지지 않았지만 그는 이미 체포된 것으로 추정됩니다. 미국의 미래는 그 나라를 무너뜨린 세력의 손에 달려 있는 것으로 보입니다."
 amcivwar.607.a:0 "혁명을 위한 중대한 발걸음이군"
 amcivwar.607.b:0 "폭군은 죽었다!"
 amcivwar.607.c:0 "뿌린만큼 거두는군"
@@ -965,7 +965,7 @@ amcivwar.607.e:0 "놀랍군!"
 
 amcivwar.608.t:0 "노동 연맹의 붕괴"
 amcivwar.608.d.lives:0 "It appears that the Syndicate government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Syndicate leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
-amcivwar.608.d.falls:0 "News travelled quickly today that the [CSA.GetNameDef] government has collapsed in the American Civil War. What land was formerly under its control has been swallowed up by the other American factions, and the last remaining Syndicate leaders were reported to have met with generals from [annex_to.GetNameDef] in order to negotiate the terms of their complete surrender. The whereabouts of [CSA.GetLeader] is unknown, but he is believed to have already been placed under arrest. The threat that the United States will fall to syndicalism has, it appears, come to an end."
+amcivwar.608.d.falls:0 "오늘, 미국 내전에서 노동 연맹 정부가 붕괴되었다는 소식이 빠르게 전해졌습니다. 노동 연맹의 지배하에 있던 영토는 미국의 다른 세력들에 의해 흡수되었고, 마지막 남은 노동 연맹의 지도부들은 완전한 항복 조건을 협상하기 위해 [annex_to.GetNameDef]의 장군들과 만난 것으로 알려졌습니다. [CSA.GetLeader]의 소재는 알려지지 않았지만 그는 이미 체포된 것으로 추정됩니다. 미국이 생디칼리즘에 빠질 것이라는 위협은 이제 끝났습니다."
 amcivwar.608.a:0 "X같은 시대로군"
 amcivwar.608.b:0 "적어도 좋은 소식이군"
 amcivwar.608.c:0 "혁명은 개뿔, 지옥에나 가라"
@@ -973,7 +973,7 @@ amcivwar.608.e:0 "흥미롭군"
 
 amcivwar.609.t:0 "미주 연합의 붕괴"
 amcivwar.609.d.lives:0 "It appears that the Union government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some Union leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
-amcivwar.609.d.falls:0 "오늘, 미국 내전에서 미주 연합 정부가 붕괴되었다는 소식이 빠르게 전해졌습니다. 미주 연합의 지배하에 있던 영토는 미국의 다른 세력들에 의해 흡수되었고, 마지막 남은 미주 연합의 지도부들은 완전한 항복 조건을 협상하기 위해[annex_to.GetNameDef]의 장군들과 만난 것으로 알려졌습니다. [TEX.GetLeader]의 소재는 알려지지 않았지만 그는 이미 체포된 것으로 추정됩니다. [TEX.GetNameDef]의 급진적인 사상에 의해 미국이 무너질 것이라는 위협은 이제 끝났습니다."
+amcivwar.609.d.falls:0 "오늘, 미국 내전에서 미주 연합 정부가 붕괴되었다는 소식이 빠르게 전해졌습니다. 미주 연합의 지배하에 있던 영토는 미국의 다른 세력들에 의해 흡수되었고, 마지막 남은 미주 연합의 지도부들은 완전한 항복 조건을 협상하기 위해 [annex_to.GetNameDef]의 장군들과 만난 것으로 알려졌습니다. [TEX.GetLeader]의 소재는 알려지지 않았지만 그는 이미 체포된 것으로 추정됩니다. [TEX.GetNameDef]의 급진적인 사상에 의해 미국이 무너질 것이라는 위협은 이제 끝났습니다."
 amcivwar.609.a:0 "당연히 그래야지"
 amcivwar.609.b:0 "적어도 좋은 소식이구만"
 amcivwar.609.c:0 "뿌린만큼 거두는군"
@@ -981,7 +981,7 @@ amcivwar.609.e:0 "흥미롭군"
 
 amcivwar.610.t:0 "태평양 합중국의 붕괴"
 amcivwar.610.d.lives:0 "It appears that the Pacific States government is on its last legs in the American Civil War. Already most of its land has been swallowed up by [annex_to.GetNameDef] and other American factions, and what is left is but the last remnants of its army - now demoralized and suffering from mass desertions, but holding out against all hope that a miracle might save them. Some leaders have already met with [annex_to.GetAdjective] generals to negotiate the terms of their inevitable complete surrender."
-amcivwar.610.d.falls:0 "News travelled quickly today that the Pacific States government has collapsed in the American Civil War. What land was formerly under its control has been swallowed up by the other American factions, and the last remaining loyalist leaders were reported to have met with generals from [annex_to.GetNameDef] in order to negotiate the terms of their complete surrender. The whereabouts of [CAL.GetLeader] is unknown, but he is also believed to have already been placed under arrest. The future of the United States, it appears, rests in the hands of the factions which tore it down."
+amcivwar.610.d.falls:0 "오늘, 미국 내전에서 태평양 합중국 정부가 붕괴되었다는 소식이 빠르게 전해졌습니다. 태평양 합중국의 지배하에 있던 영토는 미국의 다른 세력들에 의해 흡수되었고, 마지막 남은 태평양 합중국의 지도부들은 완전한 항복 조건을 협상하기 위해 [annex_to.GetNameDef]의 장군들과 만난 것으로 알려졌습니다. [CAL.GetLeader]의 소재는 알려지지 않았지만 그는 이미 체포된 것으로 추정됩니다. 미국의 미래는 그 나라를 무너뜨린 세력의 손에 달려 있는 것으로 보입니다."
 amcivwar.610.a:0 "당연히 그래야지"
 amcivwar.610.b:0 "적어도 좋은 소식이군"
 amcivwar.610.c:0 "뿌린만큼 거두는군"
