--- a/Kaiserreich Korean Translation/localisation/KR_Prussia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Prussia_l_english.yml
@@ -4,20 +4,20 @@
 DDR_totalist_party:0 "SE"
 DDR_totalist_party_long:0 "Sozialistische Einheitsplattform"
 DDR_radical_socialist_party:0 "PBA"
-DDR_radical_socialist_party_long:0 "Preußische Bauern- und Arbeitervereinigung"
+DDR_radical_socialist_party_long:0 "프로이센 농부 노동자 연맹"
 DDR_syndicalist_party:0 "POI"
-DDR_syndicalist_party_long:0 "Preußische Organisation der Internationale "
+DDR_syndicalist_party_long:0 "인터내셔널 프로이센 지부"
 DDR_social_democrat_party:0 "SPD"
-DDR_social_democrat_party_long:0 "Sozialdemokratische Partei Deutschlands"
+DDR_social_democrat_party_long:0 "독일 사회민주당"
 DDR_social_liberal_party:0 "FVP"
-DDR_social_liberal_party_long:0 "Fortschrittliche Volkspartei"
+DDR_social_liberal_party_long:0 "진보인민당"
 DDR_market_liberal_party:0 "NLP"
-DDR_market_liberal_party_long:0 "Nationalliberale Partei"
+DDR_market_liberal_party_long:0 "국가자유당"
 DDR_social_conservative_party:0 "CDV"
-DDR_social_conservative_party_long:0 "Christlich-Demokratische Volkspartei"
+DDR_social_conservative_party_long:0 "기독교민주인민당"
 DDR_authoritarian_democrat_party:0 "DKP"
-DDR_authoritarian_democrat_party_long:0 "Deutschkonservative Partei"
+DDR_authoritarian_democrat_party_long:0 "독일 보수당"
 DDR_paternal_autocrat_party:0 "FP"
-DDR_paternal_autocrat_party_long:0 "Freikonservative Partei"
+DDR_paternal_autocrat_party_long:0 "자유보수당"
 DDR_national_populist_party:0 "AV"
-DDR_national_populist_party_long:0 "Alldeutscher Verband"
+DDR_national_populist_party_long:0 "전독일연맹"
