--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -274,9 +274,9 @@ USA_arsenal_of_democracy_idea_2:0 "민주주의의 병기창"
 USA_on_the_beach_idea:0 "해변 위에서"
 USA_american_advisors_1:0 "미국 고문단"
 CAL_american_advisors_1:0 "미국 고문단"
-USA_fortress_america_idea_1:0 "요새 미국"
-USA_fortress_america_idea_2:0 "요새 미국"
-USA_fortress_america_idea_3:0 "요새 미국"
+USA_fortress_america_idea_1:0 "미국의 요새"
+USA_fortress_america_idea_2:0 "미국의 요새"
+USA_fortress_america_idea_3:0 "미국의 요새"
 USA_neutrality_idea:0 "중립 사업"
 
 amcviwar_ready_to_surrender:0 "붕괴 임박"
@@ -746,7 +746,7 @@ USA_united_together_desc:0 "The American people are less than enthusiastic with 
 USA_the_american_century:0 "미국의 세기"
 USA_the_american_century_desc:0 "The great ideological struggle for world peace has established the explicit power of the American industry and economy. America is essential to victory over tyranny and Syndicalism and will be essential in preserving world peace should we succeed."
 
-USA_back_in_business:0 "사업 재개"
+USA_back_in_business:0 "세계무대로 돌아가기"
 USA_back_in_business_desc:0 "우리의 국가는 국제적인 강대국으로 활동할 수 없다는 것을 의미했던 몇 가지 문제들을 보아왔습니다. 하지만 그것은 이제 바뀌었습니다. 미국은 세계무대에 재진입할 준비가 돼 있습니다."
 USA_rebuild_monroe:0 "먼로 독트린 재건"
 USA_rebuild_monroe_desc:0 "The troubles in Europe and elsewhere are not ours. America belongs to the New World, and to that end we must endeavour to stake out our place in it. It is our destiny to be the master of North America and protector of South America, and woe betide those who would stand in our way."
@@ -760,29 +760,29 @@ USA_propping_up_allies:0 "신 아메리카 제국주의"
 USA_propping_up_allies_desc:0 "Americans are not imperialists - we go only where we are welcomed, and enforce our will only where it is necessary to maintain order in the West. For the benefit of all."
 USA_pax_americana:0 "팍스 아메리카나"
 USA_pax_americana_desc:0 "The great struggle of this continent is now over, and a new sense of wholeness has come. Economic cooperation and social order will now reign and another great ambition of America's is complete."
-USA_enter_the_fray:0 "싸움에 가담하다"
+USA_enter_the_fray:0 "전쟁에 참가하다"
 USA_enter_the_fray_desc:0 "미국은 세계무대에 속해있으며 우리는 외국의 동맹에 말려드는 것을 주저하고 있지만 우리는 우리의 군사력을 이용해 결국 우리를 찾아낼 전 세계적인 위협을 근절하는 데 주저하지 않을 것입니다."
 USA_arsenal_of_democracy:0 "민주주의의 병기창"
 USA_arsenal_of_democracy_desc:0 "좋은 이웃 정책은 향후 갈등에 대비하기 위한 내부 프로그램을 필요로 합니다. 대통령이 말하는 이 민주주의의 병기창은 우리가 폭정과 생디칼리즘과 싸우기 위해 남아메리카의 가장 극한의 지역에서도 전쟁 물자를 공급할 수 있게 해 줄 것입니다."
-USA_longer_reach:0 "멀리까지 도달하다"
+USA_longer_reach:0 "더 넒은 영향력"
 USA_longer_reach_desc:0 "만약 우리가 우리의 힘을 다른 나라에 투영하려면, 우리는 우리의 해군력을 통해 그렇게 할 수 있는 능력을 성취해야 합니다."
-USA_on_the_beach:0 "해변 위에서"
+USA_on_the_beach:0 "해변으로"
 USA_on_the_beach_desc:0 "Our enemies must fear American soldiers landing on their shores, and to that end we must work to ensure that we have the skill and power to take advantage of our longer reach."
 USA_working_with_allies:0 "동맹과의 협력"
 USA_working_with_allies_desc:0 "American expertise must be put at the disposal of our allies - or, at least, the enemies of our enemies. If they fight better, than together we stand a chance of victory."
 USA_american_century:0 "미국의 세기"
 USA_american_century_desc:0 "The great ideological struggle for world peace has established the explicit power of the American industry and economy. America is essential to victory over tyranny and Syndicalism and will be essential in preserving world peace should we succeed."
-USA_fortress_america:0 "요새 미국"
+USA_fortress_america:0 "미국의 요새"
 USA_fortress_america_desc:0 "America has been through hell, and the time has not yet come for us to become embroiled in foreign difficulties. We must look to our home, ensure it is in order, and defend our walls should enemies come knocking on our doors."
 USA_man_the_walls:0 "장벽을 쌓아라"
 USA_man_the_walls_desc:0 "The first step in our defense must be to ensure our walls are well-guarded. The world should fear American military might, but only if they choose to engage us."
 USA_business_of_neutrality:0 "중립 사업"
 USA_business_of_neutrality_desc:0 "Neutrality has its benefit in that our enemies are few, and thus our trading partners plentiful. If America is to build itself into a true world power, we must do so on the back of the mighty American dollar."
-USA_look_inward:0 "내부 문"
+USA_look_inward:0 "내부 안정화"
 USA_look_inward_desc:0 "Never again should America face instability and the threat of civil war. We must look inward, and deal with our internal troubles, rather than gazing out to places Americans don't belong."
-USA_leap_forward:0 "미국의 도약"
+USA_leap_forward:0 "미국의 약진"
 USA_leap_forward_desc:0 "우리의 노력이 통합되고 우리의 초점이 명확해짐에 따라 미국은 다음 세기로 도약할 수 있습니다 - 우리는 다른 나라보다 훨씬 앞서 있습니다."
-USA_peace_at_last:0 "마침내 얻은 평화"
+USA_peace_at_last:0 "마지막 평화"
 USA_peace_at_last_desc:0 "우리의 노력은 결실을 맺었고, 마침내 미국은 힘과 희생이 가져다 줄 수 있는 진정한 평화를 알았습니다."
 
 
